--- a/_sass/base/_global.scss
+++ b/_sass/base/_global.scss
@@ -118,3 +118,14 @@ img[align=right] {
 .img-thumb {
   border: solid 1px #999;
 }
+
+input[type="text"], input[type="email"]{
+  margin-bottom: 20px;
+}
+
+textarea {
+  height: 150px;
+  width: 400px;
+}
+
+
